# chimera-iDash2018

./: .gitignore  .gitmodules  FXArithmetic.py  README.md  covariates.csv  data_reader.py  gradient_descent.py  gradient_descent_orthogonal.py  gradient_descent_orthogonal_fixed_precision.py  plotter.py
all/: Makefile  Makefile.regular  Makefile.temporal
common/: common.h  io.h
fhe/: BigComplex.cpp  BigComplex.h  BigFFT.cpp  BigFFT.h  BigFFT128.cpp  BigFFT128.h  BigFixP.cpp  BigFixP.h  BigFixPVector.cpp  BigFixPVector.h  BigReal.cpp  BigReal.h  BigTorus.cpp  BigTorus.h  BigTorusFixP.cpp  BigTorusPolynomial.cpp  BigTorusPolynomial.h  BigTorusVector.cpp  BigTorusVector.h  CMakeLists.txt  TLwe.cpp  TLwe.h  TRGSW.cpp  TRGSW.h  TRLwe.cpp  TRLwe.h  arithmetic.cpp  arithmetic.h  cloud-program-debug.cpp  cloud-program-temporal-debug.cpp  cloud-program-temporal.cpp  cloud-program.cpp  commons.cpp  commons.h  data_reader.cpp  data_reader.h  debug-decrypt-program.cpp  decrypt-program-temporal.cpp  decrypt-program.cpp  encrypt-program-temporal.cpp  (+9 more)
fhe/bench/: CMakeLists.txt  bench_fft.cpp  bench_fft128.cpp  bench_pubKs.cpp  bench_pubKs32.cpp
fhe/test/: arithmetic_test.cpp  fft_test.cpp  mainalgo_test.cpp  serialize_test.cpp  tlwe_test.cpp  trgsw_test.cpp  trlwe_test.cpp
fhe/utils/: cleanup-merged-branches
log_regr/: CMakeLists.txt  decrypt_X_beta.cpp  decrypt_beta.cpp  decrypt_data.cpp  enc_log_regr.cpp  encrypt_data.cpp  eval_model.py  exec.bash  gen_keys.cpp  io_ctxt.h  keyset.cpp  keyset.h  log_regr.cpp  log_regr_fncs.h  lr_params.cpp  lr_params.h  params.h  patch_tfhe_torus_generic.bash  pubkeyswitch-functions.cpp  test_bug.cpp  tfhe_torus_generic.patch  tlwe-functions-extra.cpp  tlwe-functions-extra.h  tlwe-functions.cpp  tlwekeyswitch.cpp  tlwekeyswitch.h
log_regr/test/: encrypt_data_test.cpp  log_regr_fncs_test.cpp  test_common.h
plaintext/: CMakeLists.txt  main.cpp
plaintext_simulation/: FXArithmetic.py  data_reader.py  gradient_descent.py  gradient_descent_orthogonal.py  gradient_descent_orthogonal_fixed_precision.py  gradient_descent_orthogonal_fixed_precision_sigmoid.py  plotter.py
